--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "G:\\Program Files (x86)\\Python\\Python37-32\\python.exe"
 }
