--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "G:\\Program Files (x86)\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\Am\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
 }
 
 
