--- a/.vscode/.env
+++ b/.vscode/.env
@@ -1,1 +1,1 @@
-PYTHONPATH="python.pythonPath": "C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python37\\python.exe";"python.pythonPath": "G:\\Program Files (x86)\\Python\\Python37-32\\python.exe";"C:\\Users\\Am\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
+PYTHONPATH="python.pythonPath": "python.pythonPath": C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python37\\python.exe";"python.pythonPath": "G:\\Program Files (x86)\\Python\\Python37-32\\python.exe";"python.pythonPath": C:\\Users\\Am\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
